20100608 mnemogogo-1.2.0
* Sort category names on export.
* Include support in library for deactivating categories.

20100531 mnemogogo-1.1.8
* Handle spaces in image and sound filenames
  (thanks to dandelo for the bug report).

20100506 mnemogogo-1.1.7
* Remove some excess <br/> tags from card text to fix table display under
  Android (thanks to Matt Kimsal for the report).

20100429 mnemogogo-1.1.6
* Fix the invalid syntax error on line 306 of core.
  (affects some versions of Python).

20100427 mnemogogo-1.1.5
* Integrate debugging support for FindCardDir on J2ME.
* Fix a source of possible exceptions in FindCardDir on Android.
* No longer crash if a sound file is missing
  (Thanks to Dandelo for the report.)

20100410 mnemogogo-1.1.4
* Library support for limited filesystem search on Android
  (thanks to Jean-Baptiste Rouquier for suggestion).
* Support the 'learn ahead' feature
  (thanks to Jean-Baptiste Rouquier for suggestion).
* Add library support for extracting sounds from cards.

20100322 mnemogogo-1.1.3
* Add logging support to phone library.
* Silently ignore problems with htmlentitydefs.
* Fix crash on image not found
  (thanks to Kristófer Hannesson for detecting and reporting this problem).

20100223 mnemogogo-1.1.2
* Add support for Android demos.
* Fix error: `No module named htmlentitydefs'.

20100220 mnemogogo-1.1.1
* Fix a bug in the export of sounds.
  (Thanks to Tom Nazarenko for report.)

20100220 mnemogogo-1.1.0
* Bugfixes to Android client library.
* Remove encoding requests to support IBM Java VM on Palm.
* Add backupStats() functionality to mobile/hexcsv.
* Fix a bug in the logging of thinking time.
* Remove unnecessary newlines from stats logging into Mnemosyne.
* Add checks for data corruption in readCard.
* Fix a read corruption bug in readCard (particularly under Android).
* Support for different database files in the same card directory
  (thanks to Kristófer Hannesson for detecting and reporting this problem).